2013-12-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-uu.el (gnus-uu-decode-binhex, gnus-uu-decode-binhex-view):
	Make sure work directory exists.
	(gnus-uu-digest-mail-forward): Store temporary files in work directory
	rather than tmp directory.
	(gnus-summary-prepare-exit-hook): Replace gnus-exit-group-hook, that is
	not necessarily always run, with it.

2013-12-18  Jan Tatarik  <jan.tatarik@gmail.com>

	* gnus-icalendar.el (gnus-icalendar-identities): Make changing the
	value of gnus-icalendar-additional-identities work without restart.

2013-12-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-util.el (mm-make-temp-file):
	Alias to make-temp-file for modern Emacsen.

2013-12-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-msg.el (gnus-setup-message): Fix the type of argument passed to
	nnir-article-number and nnir-article-group.

2013-12-03  Vitalie Spinu  <spinuvit@gmail.com>

	* message.el (message-send-mail-with-sendmail):
	Don't kill error buffer if sending fails.

2013-11-28  Jan Tatarik  <jan.tatarik@gmail.com>

	* gnus-icalendar.el (gnus-icalendar-event-from-ical)
	(gnus-icalendar-event->org-entry)
	(gnus-icalendar--update-org-event)
	(gnus-icalendar-event->gnus-calendar): Distinguish between
	required/optional/non-participant attendee status. Fix bug causing
	the first required event participant to be omitted.

2013-11-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (article-de-quoted-unreadable)
	(article-de-base64-unreadable, gnus-mime-copy-part)
	* gnus-html.el (gnus-article-html)
	* mm-view.el (mm-inline-text-html-render-with-w3)
	(mm-inline-text-html-render-with-w3m-standalone)
	* rfc2231.el (rfc2231-decode-encoded-string):
	Allow overriding charset by mm-charset-override-alist.

	* gnus-art.el (gnus-article-browse-html-parts):
	Replace LWSPs with `&nbsp;'s in header.

	Work for broken Chinese articles.

	* gnus-art.el (gnus-article-browse-html-save-cid-content):
	Exclude broken handles that gnus-summary-enter-digest-group may create.